[package]
name = "engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# --------------------
# Core utilities
# --------------------
log = "0.4"
env_logger = "0.11"

glam = "0.27"

anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# --------------------
# Rendering (wgpu stack)
# --------------------
wgpu = "28.0.0"
winit = "0.30"
pollster = "0.4"

image = "0.25"
gltf = "1.4"
naga = "0.20"

# --------------------
# Physics (boxed)
# --------------------
# Use raw Bullet bindings or your own bindgen crate
# bullet-sys = { version = "0.2", optional = true }

# --------------------
# Animation & engine scripting
# --------------------
rhai = "1.18"

# --------------------
# Gameplay scripting support (VM only)
# --------------------
mlua = { version = "0.9", features = ["lua54"] }

# --------------------
# Debug / tooling (optional but recommended)
# --------------------
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"

notify = "6.1"

# --------------------
# Audio
# --------------------
cpal = "0.15"
rodio = "0.19"

hound = "3.5"
lewton = "0.10"



[features]
default = []

# Explicit opt-in for Bullet backend
# bullet = ["bullet-sys"]
